frontend/src/styles/global.css
/* ... */
@media screen and (max-width: 768px) {
  #sidebar {
    width: 200px;
  }

  #content {
    width: calc(100% - 60px);
    right: auto;
    left: 200px;
  }

  html[dir="rtl"] #content {
    left: auto;
    right: 200px;
  }
}

@media screen and (max-width: 576px) {
  #content nav form .form-input input {
    display: none;
  }

  #content nav form .form-input button {
    width: auto;
    height: auto;
    background: transparent;
    border-radius: none;
  }

  #content nav form.show .form-input input {
    display: block;
    width: 100%;
    color: var(--text-primary);
  }

  #content nav form.show .form-input button {
    width: 36px;
    height: 100%;
    border-radius: 0 36px 36px 0;
    color: var(--text-primary);
    background: var(--red);
  }

  #content nav form.show~.notification,
  #content nav form.show~.profile {
    display: none;
  }

  #content main .box-info {
    grid-template-columns: 1fr;
  }

  #content main .table-data .order .create-thumb .info .selected-options {
    flex-direction: column;
  }
}

@media (max-width: 400px) {
  #content main {
    padding: 0.6rem;
  }
}

.message-container {
  height: calc(100vh);
}

.chat-main {
  display: flex;
  padding: 0px !important;
  height: calc(100vh - 56px) !important;
  max-height: calc(100vh - 56px) !important;
}

.conversations-sidebar {
  width: 30%;
  border-right: 2px dashed var(--bg-color);
  border-left: 2px dashed var(--bg-color);
  border-top: 2px dashed var(--bg-color);
  overflow-y: auto;
  background-color: var(--nav-bg);
  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.05);
  color: var(--text-color);
  border-top-left-radius: 20px;
  scrollbar-width: none;
  /* Firefox */
  -ms-overflow-style: none;
}

html[dir="rtl"] .conversations-sidebar {
  border-top-left-radius: 0px;
}

.conversations-empty {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 80%;
  color: var(--text-secondary);
}

.conversations-sidebar h2 {
  font-size: 1.2rem;
  color: var(--text-primary);
  padding: 1rem 12px;
}

.conversation-item {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 12px;
  height: 70px;
  background-color: var(--bg-color);
  cursor: pointer;
  border-bottom: 2px solid var(--nav-bg);
}

.conversation-item.active {
  background-color: var(--main-color);
  color: white;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
}

.conversation-item:hover {
  background-color: var(--input-bg-hover);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
}

.conversation-item.active .delete-conversation-btn,
.conversation-item:hover .delete-conversation-btn,
.conversation-item.active .conversation-time,
.conversation-item:hover .conversation-time {
  color: white;
}

.conv-user-avatar {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  object-fit: cover;
  flex-shrink: 0;
}

.conversation-right {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 5px;
  min-width: 0;
}

.conversation-item .user-item {
  display: inline-flex;
  position: relative;
}

.conversation-item .user-item .status {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  position: absolute;
  bottom: 10px;
  right: 5px;
  transform: translate(50%, 50%);
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
}

.conversation-item .user-item .status.online {
  background-color: #00ff00;
  color: #20f620;
  border: 2px solid #00ff00;
  box-shadow: 0 0 5px #00ff00;
}

.conversation-item .user-item .status.offline {
  background-color: #ff0000;
  color: #ff0a0a;
  box-shadow: 0 0 5px #ff0000;
}

.conversation-name-action,
.conversation-msg-time {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  min-width: 0;
}

.conversation-name {
  font-size: 1rem;
  font-weight: 600;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.delete-conversation-btn {
  background: transparent;
  border: none;
  font-size: 1rem;
  cursor: pointer;
  color: var(--text-muted);
}

.conversation-last-msg {
  font-size: 0.9rem;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-width: 0;
}

.conversation-time {
  color: var(--text-primary);
}

.conversation-unread {
  background-color: var(--main-color);
  padding: 0.25rem 0.5rem;
  border-radius: 50px;
  color: white;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
  font-size: 10px;
}

.conversation-time-unread {
  display: flex;
  align-items: center;
  gap: 5px;
  flex-shrink: 0;
  color: white;
  font-size: 0.75rem;
  border-radius: 12px;
}

/* ============================================= */
/* CHAT WINDOW */
/* ============================================= */
.chat-window {
  width: 75%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  background-color: transparent;
  border-top: 2px solid var(--bg-color);

  opacity: 0.8;
  background-image:
    repeating-linear-gradient(45deg, var(--nav-bg) 25%,
      transparent 25%,
      transparent 75%,
      var(--nav-bg) 75%,
      var(--nav-bg)),
    repeating-linear-gradient(45deg,
      var(--nav-bg) 25%,
      transparent 25%,
      transparent 75%,
      var(--nav-bg) 75%,
      var(--nav-bg));
  background-position: 0 0, 40px 40px;
  background-size: 80px 80px;
}

.chat-window .no-messages {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 1rem;
}

.chat-window .no-messages h3 {
  color: var(--text-primary);
  font-size: clamp(0.7rem, 2.5vw, 1.55rem);
  text-align: center;
  background-color: var(--input-bg);
  width: fit-content;
  padding: 1rem;
  backdrop-filter: blur(10px);
  border-radius: 20px;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
}
/* ... */

